Métodos bisección, falsa posición y Newton

--- a/Opcionales/bin/.gitignore
+++ b/Opcionales/bin/.gitignore
@@ -1,4 +1,4 @@
-/MickeyMouse$PaintPanel.class
-/MickeyMouse.class
-/EstrellaRotacion.class
-/EstrellaRotacion$PaintPanel.class
+/Biseccion.class
+/FalsaPosicion.class
+/Termino.class
+/NewtonRaphson.class
