--- a/Opcionales/bin/.gitignore
+++ b/Opcionales/bin/.gitignore
@@ -1,4 +1,10 @@
-/Biseccion.class
-/FalsaPosicion.class
-/Termino.class
-/NewtonRaphson.class
+/Flor.class
+/Flor$PaintPanel.class
+/Flor$1.class
+/DibujoFlor$1.class
+/DibujoFlor$PaintPanel.class
+/DibujoFlor$PuntoSegmento.class
+/DibujoFlor.class
+/DibujoFlor$flor.class
+/DibujoFlor$Flor.class
+/DibujoFlor$2.class
